set(SRCS
        ../code/buffer/buffer.cpp
        ../code/buffer/buffer.h
        ../code/config/config.h
        ../code/http/httpconn.cpp
        ../code/http/httpconn.h
        ../code/http/httprequest.cpp
        ../code/http/httprequest.h
        ../code/http/httpresponse.cpp
        ../code/http/httpresponse.h
        ../code/log/blockqueue.h
        ../code/log/log.cpp
        ../code/log/log.h
        ../code/pool/sqlconnRAII.h
        ../code/pool/sqlconnpool.cpp
        ../code/pool/sqlconnpool.h
        ../code/pool/threadpool.h
        ../code/server/epoller.cpp
        ../code/server/epoller.h
        ../code/server/webserver.cpp
        ../code/server/webserver.h
        ../code/timer/heaptimer.cpp
        ../code/timer/heaptimer.h
        test.cpp
        )
add_executable(test ${SRCS})
target_link_libraries(server
        pthread
        mysqlclient
        )